--- a/pomodoro/index.html
+++ b/pomodoro/index.html
@@ -22,7 +22,7 @@
 		<div class="countdown__fill" id="ticker"></div>
 		<div class="countdown__digit" id="seconds"></div>
 	</div>
-	<a id="logo" href="https://github.com/anthonytedja" onclick="event.stopPropagation()"><i class="fa fa-github fa-lg"></i></a>
+<!-- 	<a id="logo" href="https://github.com/kakoumo" onclick="event.stopPropagation()"><i class="fa fa-github fa-lg"></i></a> -->
   	<script  src="script.js"></script>
 </body>
 </html>
